RESOLVED FIXED240374
[GStreamer] Properly handle DMABuf-containing GstBuffers with missing DMABuf GstCaps feature
https://bugs.webkit.org/show_bug.cgi?id=240374
Summary [GStreamer] Properly handle DMABuf-containing GstBuffers with missing DMABuf ...
Zan Dobersek
Reported 2022-05-13 00:42:51 PDT
[GStreamer] Properly handle DMABuf-containing GstBuffers with missing DMABuf GstCaps feature
Attachments
Patch (2.95 KB, patch)
2022-05-13 00:48 PDT, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2022-05-13 00:48:32 PDT
Chris Lord
Comment 2 2022-05-13 02:10:28 PDT
Comment on attachment 459282 [details] Patch LGTM.
Zan Dobersek
Comment 3 2022-05-13 02:14:22 PDT
Comment on attachment 459282 [details] Patch Clearing flags on attachment: 459282 Committed r294152 (250522@trunk): <https://commits.webkit.org/250522@trunk>
Zan Dobersek
Comment 4 2022-05-13 02:14:28 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2022-05-13 02:15:14 PDT
Note You need to log in before you can comment on or make changes to this bug.